@@ -178,26 +178,14 @@ ChertDatabaseReplicator::process_changeset_chunk_blocks(const string & tablename
 
     string db_path = db_dir + "/" + tablename + ".DB";
 #ifdef __WIN32__
-    int fd = msvc_posix_open(db_path.c_str(), O_WRONLY | O_BINARY);
+    int fd = msvc_posix_open(db_path.c_str(), O_WRONLY | O_CREAT | O_BINARY);
 #else
-    int fd = ::open(db_path.c_str(), O_WRONLY | O_BINARY, 0666);
+    int fd = ::open(db_path.c_str(), O_WRONLY | O_CREAT | O_BINARY, 0666);
 #endif
     if (fd == -1) {
-	if (file_exists(db_path)) {
-	    string msg = "Failed to open ";
-	    msg += db_path;
-	    throw DatabaseError(msg, errno);
-	}
-#ifdef __WIN32__
-	fd = msvc_posix_open(db_path.c_str(), O_WRONLY | O_CREAT | O_TRUNC | O_BINARY);
-#else
-	fd = ::open(db_path.c_str(), O_WRONLY | O_CREAT | O_TRUNC | O_BINARY, 0666);
-#endif
-	if (fd == -1) {
-	    string msg = "Failed to create and open ";
-	    msg += db_path;
-	    throw DatabaseError(msg, errno);
-	}
+	string msg = "Failed to open ";
+	msg += db_path;
+	throw DatabaseError(msg, errno);
     }
     {
 	FD closer(fd);
